When using ZMQ certificate, merge the provided metadata. Improved ZMQ tests.